# claudeconvo

./: .claudeconvorc.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DIAGNOSTICS.md  Makefile  README.md  debug_project_discovery.py  homebrew-tap-instructions.md  pyproject.toml  requirements-dev.txt  setup.py
.claude/agents/: hello-subagent.md
.claude/commands/: diagnose-and-fix.md  pip-release.md
.github/workflows/: ci.yml  release.yml
Formula/: claudeconvo.rb  claudelog.rb
docs/: python_code_style.py
src/claudeconvo/: __init__.py  cli.py  config.py  constants.py  diagnostics.py  field_mappings_README.md  formatters.py  interactive_setup.py  sample_conversation.jsonl  session.py  simple_setup.py  styles.py  themes.py  utils.py
src/claudelog/: __init__.py  __main__.py  claudelog.py  cli.py  config.py  constants.py  diagnostics.py  field_mappings.json  formatters.py  options.py  session.py  styles.py  themes.py  tool_tracker.py  utils.py  watcher.py
src/claudelog/parsers/: __init__.py  adaptive.py  base.py  registry.py  v1_0_70.py  v1_0_80.py
tests/: CLAUDE.md  __init__.py  test_adaptive_parser.py  test_claudelog.py  test_sample_completeness.py  test_security.py  test_styles.py  test_version_compatibility.py
tests/fixtures/: anonymize.py  collect_samples.py  mock_data.py
tests/fixtures/versions/: 1_0_100.json  1_0_102.json  1_0_103.json  1_0_105.json  1_0_106.json  1_0_107.json  1_0_108.json  1_0_70.json  1_0_71.json  1_0_72.json  1_0_81.json  1_0_83.json  1_0_84.json  1_0_85.json  1_0_86.json  1_0_88.json  1_0_89.json  1_0_90.json  1_0_92.json  1_0_93.json  1_0_95.json  1_0_96.json  1_0_98.json  no_version.json  summary.json
