[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudelog"
version = "0.1.0"
description = "View Claude Code session history as a conversation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Lorenzo Pasqualis", email = "lorenzo@example.com"}
]
maintainers = [
    {name = "Lorenzo Pasqualis", email = "lorenzo@example.com"}
]
requires-python = ">=3.8"
keywords = ["claude", "claude-code", "cli", "session-viewer", "conversation", "log-viewer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "build>=0.10",
    "twine>=4.0",
]

[project.scripts]
claudelog = "claudelog:main"

[project.urls]
Homepage = "https://github.com/lpasqualis/claudelog"
Documentation = "https://github.com/lpasqualis/claudelog#readme"
Repository = "https://github.com/lpasqualis/claudelog"
Issues = "https://github.com/lpasqualis/claudelog/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claudelog = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
    "UP", # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=claudelog --cov-report=term-missing"